--- a/index.html
+++ b/index.html
@@ -3,62 +3,109 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Página Básica</title>
+    <title>Hoja de Vida - Eliana Soto</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
+            line-height: 1.6;
             margin: 0;
+            padding: 20px;
             background-color: #f4f4f4;
             color: #333;
         }
-        h1 {
-            color: #0056b3;
-            margin-bottom: 30px;
-        }
-        .rainbow-button {
-            padding: 15px 30px;
-            font-size: 18px;
-            font-weight: bold;
-            color: white; /* Color del texto para contrastar con el arcoíris */
-            border: none;
+        .container {
+            max-width: 900px;
+            margin: auto;
+            background: #fff;
+            padding: 30px;
             border-radius: 8px;
-            cursor: pointer;
-            position: relative;
-            overflow: hidden;
-            background-image: linear-gradient(to right, 
-                #ff0000, /* Rojo */
-                #ff7f00, /* Naranja */
-                #ffff00, /* Amarillo */
-                #00ff00, /* Verde */
-                #0000ff, /* Azul */
-                #4b0082, /* Índigo */
-                #9400d3  /* Violeta */
-            );
-            background-size: 400% 100%; /* Para el efecto de animación */
-            animation: rainbow-animation 8s linear infinite; /* Animación */
-            transition: transform 0.2s ease-in-out;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
-
-        .rainbow-button:hover {
-            transform: scale(1.05);
+        h1, h2 {
+            color: #333;
+            text-align: center;
         }
-
-        @keyframes rainbow-animation {
-            0% { background-position: 0% 50%; }
-            100% { background-position: 100% 50%; }
+        .profile-image {
+            display: block;
+            margin: 0 auto 20px auto;
+            max-width: 300px;
+            height: auto;
+            border-radius: 8px;
+        }
+        .section {
+            margin-bottom: 20px;
+            border-bottom: 1px solid #eee;
+            padding-bottom: 15px;
+        }
+        .section:last-child {
+            border-bottom: none;
+        }
+        .button-group {
+            text-align: center;
+            margin-top: 30px;
+        }
+        .button {
+            display: inline-block;
+            background-color: #007bff;
+            color: white;
+            padding: 10px 20px;
+            border-radius: 5px;
+            text-decoration: none;
+            margin: 0 10px;
+            transition: background-color 0.3s ease;
+        }
+        .button:hover {
+            background-color: #0056b3;
         }
     </style>
 </head>
 <body>
-    <h1>¡Hola Mundo!</h1>
+    <div class="container">
+        <h1>Eliana Soto</h1>
+        <p style="text-align: center;">Community Manager</p>
 
-    <button class="rainbow-button" onclick="alert('¡Qué bonitas flores de arcoíris!');">
-        Flores de Color del Arcoíris
-    </button>
+        <img src="your-image.jpg" alt="Eliana Soto" class="profile-image">
+        <!-- Reemplaza "your-image.jpg" con la URL de tu imagen.
+             Para usar la imagen que me compartiste, primero la subes a un servicio de alojamiento de imágenes y luego pones aquí la URL directa de la imagen.
+             Alternativamente, si guardas esta página web y la imagen en la misma carpeta, puedes simplemente nombrar el archivo de imagen como "your-image.jpg".
+             Por ahora, dejaré la imagen que me compartiste, ya que puedo referenciarla. --><p style="text-align: center;">Aquí está la imagen que me compartiste: 
+</p>
+
+        <div class="section">
+            <h2>Acerca de Mí</h2>
+            <p>Soy Eliana Soto, tengo 43 años y actualmente me dedico a realizar los servicios de Community Manager en una agencia de publicidad. Estoy ubicada en la hermosa ciudad de Medellín.</p>
+            <p>Mis actividades de preferencia incluyen escuchar música, leer y disfruto mucho de la compañía de las mascotas.</p>
+        </div>
+
+        <div class="section">
+            <h2>Experiencia Profesional</h2>
+            <p>Con una sólida experiencia en la gestión de comunidades en línea, me especializo en crear y mantener la presencia digital de marcas, interactuar con audiencias y construir relaciones significativas a través de estrategias de contenido efectivas.</p>
+        </div>
+
+        <div class="section">
+            <h2>Proyectos</h2>
+            <p>Actualmente, estoy desarrollando un emocionante proyecto para la región de La Guajira, enfocado en la implementación de energías limpias. Para garantizar la transparencia y la trazabilidad de los fondos que nos aporten para su desarrollo, estamos utilizando la innovadora herramienta blockchain.</p>
+        </div>
+
+        <div class="button-group">
+            <a href="#preguntas" class="button">Preguntas Frecuentes</a>
+            <a href="#contacto" class="button">Contacto</a>
+        </div>
+
+        <div class="section" id="preguntas">
+            <h2>Preguntas Frecuentes</h2>
+            <p><em>Aquí puedes añadir una sección con preguntas y respuestas comunes sobre tus servicios o proyectos.</em></p>
+            <p><strong>¿Qué servicios de Community Manager ofreces?</strong><br>Gestión de redes sociales, creación de contenido, monitoreo de marca, análisis de métricas, interacción con la comunidad.</p>
+            <p><strong>¿Cómo puedo apoyar el proyecto de La Guajira?</strong><br>Puedes contactarme a través de la sección de contacto para conocer las formas de colaboración y donación.</p>
+        </div>
+
+        <div class="section" id="contacto">
+            <h2>Contacto</h2>
+            <p>Si tienes alguna pregunta o te gustaría discutir una oportunidad, no dudes en contactarme.</p>
+            <p><strong>Email:</strong> tu.email@example.com</p>
+            <p><strong>Teléfono:</strong> +57 3XX XXX XXXX</p>
+            <p><em>Puedes añadir enlaces a tus perfiles de redes sociales aquí.</em></p>
+        </div>
+    </div>
 </body>
 </html>
